tests/diagnostics/snapshots/operand_expected.snap
---
source: src/test/diagnostics.rs
expression: diagnostics
input_file: tests/diagnostics/operand_expected.asm
---
[
  {
    "severity": "error",
    "code": "operand_expected",
    "message": "An operand was expected after this comma.",
    "hint": "Remove the comma if the operand list ends here",
    "location": {
      "file": "operand_expected.asm",
      "line": 1,
      "column": 14,
      "endColumn": 14
    },
    "related": []
  }
]
