tests/diagnostics/snapshots/operation_expected.snap
---
source: src/test/diagnostics.rs
expression: diagnostics
input_file: tests/diagnostics/operation_expected.asm
---
[
  {
    "severity": "error",
    "code": "operation_expected",
    "message": "`5` is not a mnemonic or a directive.",
    "hint": null,
    "location": {
      "file": "operation_expected.asm",
      "line": 1,
      "column": 7,
      "endColumn": 8
    },
    "related": []
  }
]
