tests/diagnostics/snapshots/register_expected_in_register_list.snap
---
source: src/test/diagnostics.rs
expression: diagnostics
input_file: tests/diagnostics/register_expected_in_register_list.asm
---
[
  {
    "severity": "error",
    "code": "register_expected_in_register_list",
    "message": "A register was expected after `-`.",
    "hint": "A register list reads `d0-d3/a0-a2`",
    "location": {
      "file": "register_expected_in_register_list.asm",
      "line": 1,
      "column": 15,
      "endColumn": 16
    },
    "related": []
  }
]
